# UniBoard

./: .gitignore  ARCHITECTURE.md  AUTHENTICATION.md  AUTHENTICATION_COMPLETE.md  AUTHENTICATION_IMPLEMENTATION.md  AUTH_QUICK_REFERENCE.md  COMPLETION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  LICENSE  README.md  SETUP_GUIDE.md  VALIDATION_RULES.md  docker-compose.microservices.yml  docker-compose.yml  package-lock.json  pyproject.toml  tailwind.config.js
app/: utils.py
backend/: init_db.py  requirements.txt
backend/app/: database.py  dependencies.py  main.py  models.py  schemas.py  utils.py
backend/app/routers/: admin.py  auth.py  listings.py  owners.py  reviews.py  rooms.py  users.py
frontend/: package-lock.json  package.json  tailwind.config.js  wrangler.jsonc
frontend-admin/: index.html  package-lock.json  package.json  tailwind.config.js
frontend-admin/src/: App.tsx  index.css
frontend-admin/src/components/: AdminRoute.tsx
frontend-admin/src/contexts/: AuthContext.tsx
frontend-admin/src/pages/: DashboardPage.tsx  LoginPage.tsx
frontend-admin/src/services/: api.ts
frontend/src/: App.tsx
frontend/src/components/: DashboardLayout.tsx  Footer.tsx  (+3 more)
services/admin-service/: Dockerfile
services/auth-service/: requirements.txt
services/boarding-service/: Dockerfile  requirements.txt  test_service.py
services/booking-service/: Dockerfile  requirements.txt
services/gateway-service/: requirements.txt
services/notification-service/: Dockerfile
services/review-service/: Dockerfile  requirements.txt
services/student-service/: Dockerfile
(+49 files in other folders)
